identified 147 ozzie papers from the whole lot

--- a/NOTEBOOKS/00_nips_analysis.ipynb
+++ b/NOTEBOOKS/00_nips_analysis.ipynb
@@ -103,7 +103,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note: Ben has conveniently placed the data as csv files as well as built a sqlite database. I'm just gonna use the db because it's taking ages to open on my sublime text as well!"
+    "The github link above has a script for extracting nips papers data from the www. Thats like teaching us how to fish. This time however, I just want to eat the fish. Ben has also extracted the data in csv and sqlite db format here (https://www.kaggle.com/benhamner/nips-2015-papers). \n",
+    "\n",
+    "I tried playing around with the csvs and they were a bit sluggish due to size. So I'm going to be using the sqlite db that I've downloaded into my data directory."
    ]
   },
   {
@@ -314,6 +316,8 @@
     }
    ],
    "source": [
+    "# note the memory usage argument in the function gives a more accurate estimate of memory usage. Otherwise it just says \n",
+    "# something to the effect of 3.5+Kb\n",
     "df_papers.info(memory_usage='deep')"
    ]
   },
@@ -830,7 +834,361 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TO BE CONTINUED..."
+    "### how about Australia as a whole?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "263"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_papers['paper_text'].str.contains('Australia').sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>year</th>\n",
+       "      <th>title</th>\n",
+       "      <th>event_type</th>\n",
+       "      <th>pdf_name</th>\n",
+       "      <th>abstract</th>\n",
+       "      <th>paper_text</th>\n",
+       "      <th>paper_length</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>262</th>\n",
+       "      <td>269</td>\n",
+       "      <td>1989</td>\n",
+       "      <td>Predicting Weather Using a Genetic Memory: A C...</td>\n",
+       "      <td></td>\n",
+       "      <td>269-predicting-weather-using-a-genetic-memory-...</td>\n",
+       "      <td>Abstract Missing</td>\n",
+       "      <td>Predicting Weather Using a Genetic Memory\\n\\nP...</td>\n",
+       "      <td>3861</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>280</th>\n",
+       "      <td>289</td>\n",
+       "      <td>1989</td>\n",
+       "      <td>Using Local Models to Control Movement</td>\n",
+       "      <td></td>\n",
+       "      <td>289-using-local-models-to-control-movement.pdf</td>\n",
+       "      <td>Abstract Missing</td>\n",
+       "      <td>316\\n\\nAtkeson\\n\\nUsing Local Models to Contro...</td>\n",
+       "      <td>2926</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>375</th>\n",
+       "      <td>386</td>\n",
+       "      <td>1990</td>\n",
+       "      <td>e-Entropy and the Complexity of Feedforward Ne...</td>\n",
+       "      <td></td>\n",
+       "      <td>386-e-entropy-and-the-complexity-of-feedforwar...</td>\n",
+       "      <td>Abstract Missing</td>\n",
+       "      <td>c-Entropy and the Complexity of\\nFeedforward N...</td>\n",
+       "      <td>2341</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>398</th>\n",
+       "      <td>410</td>\n",
+       "      <td>1990</td>\n",
+       "      <td>Comparison of three classification techniques:...</td>\n",
+       "      <td></td>\n",
+       "      <td>410-comparison-of-three-classification-techniq...</td>\n",
+       "      <td>Abstract Missing</td>\n",
+       "      <td>Comparison of three classification techniques,...</td>\n",
+       "      <td>3114</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>422</th>\n",
+       "      <td>434</td>\n",
+       "      <td>1990</td>\n",
+       "      <td>Direct memory access using two cues: Finding t...</td>\n",
+       "      <td></td>\n",
+       "      <td>434-direct-memory-access-using-two-cues-findin...</td>\n",
+       "      <td>Abstract Missing</td>\n",
+       "      <td>Direct memory access using two cues: Finding\\n...</td>\n",
+       "      <td>3158</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      id  year                                              title event_type  \\\n",
+       "262  269  1989  Predicting Weather Using a Genetic Memory: A C...              \n",
+       "280  289  1989             Using Local Models to Control Movement              \n",
+       "375  386  1990  e-Entropy and the Complexity of Feedforward Ne...              \n",
+       "398  410  1990  Comparison of three classification techniques:...              \n",
+       "422  434  1990  Direct memory access using two cues: Finding t...              \n",
+       "\n",
+       "                                              pdf_name          abstract  \\\n",
+       "262  269-predicting-weather-using-a-genetic-memory-...  Abstract Missing   \n",
+       "280     289-using-local-models-to-control-movement.pdf  Abstract Missing   \n",
+       "375  386-e-entropy-and-the-complexity-of-feedforwar...  Abstract Missing   \n",
+       "398  410-comparison-of-three-classification-techniq...  Abstract Missing   \n",
+       "422  434-direct-memory-access-using-two-cues-findin...  Abstract Missing   \n",
+       "\n",
+       "                                            paper_text  paper_length  \n",
+       "262  Predicting Weather Using a Genetic Memory\\n\\nP...          3861  \n",
+       "280  316\\n\\nAtkeson\\n\\nUsing Local Models to Contro...          2926  \n",
+       "375  c-Entropy and the Complexity of\\nFeedforward N...          2341  \n",
+       "398  Comparison of three classification techniques,...          3114  \n",
+       "422  Direct memory access using two cues: Finding\\n...          3158  "
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_papers[df_papers['paper_text'].str.contains('Australia')].head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This gives me all kinds of junk. dataframe id 262 \"predicting weather using genetic memory\" has the word Australia listed inside the body of the text while describing something near the Australian coast. One way of handling this is to search for the word Australia within the first 100 words of the paper_text."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# get the first 100 words of the paper text and store it in a new variable \"paper_text_100_words\"\n",
+    "df_papers['paper_text_100_words'] = df_papers['paper_text'].apply(lambda x: ' '.join(x.split()[:100]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "147"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_papers['paper_text_100_words'].str.contains('Australia').sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Its not bullet-proof. Some Australian authors may have published without university affiliations. In such cases, there's no reason why the word 'Australia' might figure in their papers. However, I cant think of a better way to approach the problem. So it will have to do!\n",
+    "\n",
+    "WOW. 147 papers from Australia out of the 6500 papers. Still, its not too shabby, and i have my playground at last."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>year</th>\n",
+       "      <th>title</th>\n",
+       "      <th>event_type</th>\n",
+       "      <th>pdf_name</th>\n",
+       "      <th>abstract</th>\n",
+       "      <th>paper_text</th>\n",
+       "      <th>paper_length</th>\n",
+       "      <th>paper_text_100_words</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>375</th>\n",
+       "      <td>386</td>\n",
+       "      <td>1990</td>\n",
+       "      <td>e-Entropy and the Complexity of Feedforward Ne...</td>\n",
+       "      <td></td>\n",
+       "      <td>386-e-entropy-and-the-complexity-of-feedforwar...</td>\n",
+       "      <td>Abstract Missing</td>\n",
+       "      <td>c-Entropy and the Complexity of\\nFeedforward N...</td>\n",
+       "      <td>2341</td>\n",
+       "      <td>c-Entropy and the Complexity of Feedforward Ne...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>398</th>\n",
+       "      <td>410</td>\n",
+       "      <td>1990</td>\n",
+       "      <td>Comparison of three classification techniques:...</td>\n",
+       "      <td></td>\n",
+       "      <td>410-comparison-of-three-classification-techniq...</td>\n",
+       "      <td>Abstract Missing</td>\n",
+       "      <td>Comparison of three classification techniques,...</td>\n",
+       "      <td>3114</td>\n",
+       "      <td>Comparison of three classification techniques,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>422</th>\n",
+       "      <td>434</td>\n",
+       "      <td>1990</td>\n",
+       "      <td>Direct memory access using two cues: Finding t...</td>\n",
+       "      <td></td>\n",
+       "      <td>434-direct-memory-access-using-two-cues-findin...</td>\n",
+       "      <td>Abstract Missing</td>\n",
+       "      <td>Direct memory access using two cues: Finding\\n...</td>\n",
+       "      <td>3158</td>\n",
+       "      <td>Direct memory access using two cues: Finding t...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>430</th>\n",
+       "      <td>442</td>\n",
+       "      <td>1991</td>\n",
+       "      <td>Splines, Rational Functions and Neural Networks</td>\n",
+       "      <td></td>\n",
+       "      <td>442-splines-rational-functions-and-neural-netw...</td>\n",
+       "      <td>Abstract Missing</td>\n",
+       "      <td>Splines, Rational Functions and Neural Network...</td>\n",
+       "      <td>2841</td>\n",
+       "      <td>Splines, Rational Functions and Neural Network...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>456</th>\n",
+       "      <td>468</td>\n",
+       "      <td>1991</td>\n",
+       "      <td>Operators and curried functions: Training and ...</td>\n",
+       "      <td></td>\n",
+       "      <td>468-operators-and-curried-functions-training-a...</td>\n",
+       "      <td>Abstract Missing</td>\n",
+       "      <td>Operators and curried functions:\\nTraining and...</td>\n",
+       "      <td>2674</td>\n",
+       "      <td>Operators and curried functions: Training and ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      id  year                                              title event_type  \\\n",
+       "375  386  1990  e-Entropy and the Complexity of Feedforward Ne...              \n",
+       "398  410  1990  Comparison of three classification techniques:...              \n",
+       "422  434  1990  Direct memory access using two cues: Finding t...              \n",
+       "430  442  1991    Splines, Rational Functions and Neural Networks              \n",
+       "456  468  1991  Operators and curried functions: Training and ...              \n",
+       "\n",
+       "                                              pdf_name          abstract  \\\n",
+       "375  386-e-entropy-and-the-complexity-of-feedforwar...  Abstract Missing   \n",
+       "398  410-comparison-of-three-classification-techniq...  Abstract Missing   \n",
+       "422  434-direct-memory-access-using-two-cues-findin...  Abstract Missing   \n",
+       "430  442-splines-rational-functions-and-neural-netw...  Abstract Missing   \n",
+       "456  468-operators-and-curried-functions-training-a...  Abstract Missing   \n",
+       "\n",
+       "                                            paper_text  paper_length  \\\n",
+       "375  c-Entropy and the Complexity of\\nFeedforward N...          2341   \n",
+       "398  Comparison of three classification techniques,...          3114   \n",
+       "422  Direct memory access using two cues: Finding\\n...          3158   \n",
+       "430  Splines, Rational Functions and Neural Network...          2841   \n",
+       "456  Operators and curried functions:\\nTraining and...          2674   \n",
+       "\n",
+       "                                  paper_text_100_words  \n",
+       "375  c-Entropy and the Complexity of Feedforward Ne...  \n",
+       "398  Comparison of three classification techniques,...  \n",
+       "422  Direct memory access using two cues: Finding t...  \n",
+       "430  Splines, Rational Functions and Neural Network...  \n",
+       "456  Operators and curried functions: Training and ...  "
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_papers[df_papers['paper_text_100_words'].str.contains('Australia')].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "df_papers['ozzie'] = np.where(df_papers['paper_text_100_words'].str.contains('Australia'),1,0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    6413\n",
+       "1     147\n",
+       "Name: ozzie, dtype: int64"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_papers.ozzie.value_counts()"
    ]
   },
   {
@@ -842,7 +1200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
