first pass at analysing top players and unis within oz complete. Needs more analysis and refactoring before publishing maybe to kaggle kernels

--- a/NOTEBOOKS/00_nips_prepare_country_specific_dataset.ipynb
+++ b/NOTEBOOKS/00_nips_prepare_country_specific_dataset.ipynb
@@ -54,6 +54,7 @@
     "sns.set(style=\"darkgrid\")\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "pd.set_option('display.max_columns', None) # Display any number of columns\n",
     "\n",
     "from datetime import datetime\n",
     "\n",
