sad - after seeing that data update was already done and i didnt see it. continuing with 2017 researcher scan.

--- a/NOTEBOOKS/02_nips_2017_data_download.ipynb
+++ b/NOTEBOOKS/02_nips_2017_data_download.ipynb
@@ -1043,6 +1043,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## SAD :("
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Just noticed that the kaggle kernel data section has a section called \"versions\". The author has mentioned in this section that he has updated data for 2017. All this effort for 3 additional authors, who, as it turns out, are researchers from openai and google research. Moving on..."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
